# CompilationPrinciples

./: .gitignore  README.md
Lab1/: CMakeLists.txt  build.sh  generate.sh  lex_analyser.l  main.c  parse.sh  parser.y
Lab1/bits/: ast_node.c  ast_node.h  defs.h  k_tree.c  k_tree.h  main.c  stack.c  stack.h  token.c  token.h  variable.c  variable.h
Lab1/test/: test2.cmm
Lab2/: CMakeLists.txt  build.sh  main.cpp
Lab2/bits/: main.cpp  semantic_analyser.cpp  semantic_analyser.h
Lab2/bits/symbols/: arithmetic_symbol.h  array_symbol.h  function_symbol.h  struct_def_symbol.h  struct_symbol.h  symbol.h  symbol_type.h  variable_symbol.h
Lab2/test/: extra20.cmm  extra21.cmm  extra22.cmm  extra23.cmm  test1.cmm  test12.cmm  test13.cmm  test14.cmm  test15.cmm  test2.cmm  test3.cmm  test4.cmm  test5.cmm  test6.cmm  test7.cmm  test8.cmm  test9.cmm
Lab3/: CMakeLists.txt  auto-test.sh  build.sh  lex_analyser.l  main.cpp  parse.sh
Lab3/bits/: array_symbol.h  ast_node.c  ast_node.h  defs.h  function_symbol.h  instruction_generator.cpp  instruction_generator.h  ir_generator.cpp  ir_generator.h  k_tree.c  linked_list.c  linked_list.h  main.c  main.cpp  struct_symbol.h  symbol.h  symbol_table_builder.cpp  symbol_table_builder.h  symbol_type.h  token.c  token.h
Lab3/bits/exp_values/: array_element_exp_value.h  exp_value.h  struct_field_exp_value.h
Lab3/bits/symbols/: arithmetic_symbol.h  array_symbol.h  function_symbol.h  struct_symbol.h  struct_symbol_def.h  symbol.h  symbol_type.h
Lab3/test/: test10.cmm
